--- a/app.json
+++ b/app.json
@@ -21,7 +21,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/app-info/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.hungdev.js.lovestory",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./src/assets/app-info/favicon.png"
